[project]
name = "getinstance"
version = "0.6"
description = "getinstance"
authors = [
    {name = "Evstifeev Roman", email = "someuniquename@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-mock>=3.14.0",
]
debug = [
    "ipdb>=0.13.13",
]

[project.urls]
Homepage = "https://github.com/Fak3/getinstance"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


